# typespeed

./: .gitignore  CMakeLists.txt  LICENSE  README.md  sentences.h  typespeed.c  typespeed.h
